--- a/app/ladder/templates/ladder/player_teammates.html
+++ b/app/ladder/templates/ladder/player_teammates.html
@@ -1,4 +1,4 @@
-{% extends 'ladder/player_detail.html' %}
+{% extends 'ladder/player_overview.html' %}
 {% load staticfiles %}
 
 {% block page_scripts %}
@@ -7,7 +7,7 @@
     <script src="{% static 'ladder/js/player_teammates.js' %}"></script>
 {% endblock page_scripts %}
 
-{% block player-page-title %}Teammates{% endblock %}
+{% block player-page-title %} Teammates {% endblock %}
 
 {% block player-content %}
 
