--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -59,7 +59,7 @@
             {% for player in player_list %}
                 {% url 'ladder:player-overview' player.slug as player_url %}
 
-                <tr class="player_row">
+                <tr class="player_row" data-link="{{ player_url }}">
                     <td class="cell-centered">
                         {{ player.rank_ladder_mmr }}
                     </td>
