#16 added Clicky analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,12 @@
                 </nav>
             </div>
         </div>
+
+        {# Clicky analytics #}
+        <a title="Real Time Web Analytics" href="http://clicky.com/101015791"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(101015791); }catch(e){}</script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101015791ns.gif" /></p></noscript>
     </body>
 </html>
 {%  endspaceless %}
