--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}Dota 2 EU Ladder{% endblock title %}</title>
+        <title>{% block title %} Dota 2 ladder {% endblock title %}</title>
 
         <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -35,13 +35,13 @@
         <div class="menu-primary">
             <div class="container col-md-9">
                 {% url 'index' as url %}
-                <a class="menu-logo" href="{{ url }}"> Dota 2 EU Ladder </a>
+                <a class="menu-logo" href="{{ url }}"> Dota 2 Ladder </a>
 
                 {% with request.resolver_match.url_name as url_name %}
                 <nav class="menu-links">
                     <ul>
-                        <li class="{% if 'player' in url_name %}active{% endif %}">
-                            {% url 'ladder:player-list' as url %}
+                        <li class="{% if 'player' in url_name or url_name == 'index' %}active{% endif %}">
+                            {% url 'ladder:player-list-score' as url %}
                             <a href="{{ url }}"> Leaderboards </a></li>
 
                         <li class="{% if 'balancer' in url_name %}active{% endif %}">
@@ -81,4 +81,3 @@
     </body>
 </html>
 {%  endspaceless %}
-
