changed lobby and website name

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{% block title %} Dota 2 ladder {% endblock title %}</title>
+        <title>{% block title %} Dota 2 Latvia {% endblock title %}</title>
 
         <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -35,7 +35,7 @@
         <div class="menu-primary">
             <div class="container col-md-9">
                 {% url 'index' as url %}
-                <a class="menu-logo" href="{{ url }}"> Dota 2 Ladder </a>
+                <a class="menu-logo" href="{{ url }}"> Dota 2 Latvia </a>
 
                 {% with request.resolver_match.url_name as url_name %}
                 <nav class="menu-links">
