#38 show teammates stats for all time

--- a/app/ladder/templates/ladder/player_overview.html
+++ b/app/ladder/templates/ladder/player_overview.html
@@ -121,7 +121,7 @@
 
         <section>
             <header>Best teammates
-            <small>This season</small>
+            <small>All time</small>
             <div class="more">
                 <a href="{% url 'ladder:player-teammates' player.slug %}">
                     <i class="fa fa-plus-square"></i> more
@@ -135,7 +135,7 @@
 
         <section>
             <header>Strongest opponents
-            <small>This season</small>
+            <small>All time</small>
             <div class="more">
                 <a href="{% url 'ladder:player-opponents' player.slug %}">
                     <i class="fa fa-plus-square"></i> more
