--- a/app/ladder/templates/ladder/player_scores_table.html
+++ b/app/ladder/templates/ladder/player_scores_table.html
@@ -68,9 +68,9 @@
 
                     <td>
                         {% if event.match %}
-                            <a href="">Dotabuff</a>
+                            <a href="https://www.dotabuff.com/matches/{{ event.match.match.dota_id }}">Dotabuff</a>
                             &nbsp;
-                            <a href="">Opendota</a>
+                            <a href="https://www.opendota.com/matches/{{ event.match.match.dota_id }}">Opendota</a>
                         {% else %}
                             {{ event.info }}
                         {% endif %}
