#48 highlight unregistered lobby members

--- a/app/ladder/static/ladder/css/lobby_status.css
+++ b/app/ladder/static/ladder/css/lobby_status.css
@@ -43,3 +43,8 @@ section header .right {
 .game {
     color: #39CCCC;
 }
+
+.unregistered a,
+.unregistered span {
+    color: #FBB829 !important;
+}
