--- a/app/ladder/templates/ladder/player_teammates_table.html
+++ b/app/ladder/templates/ladder/player_teammates_table.html
@@ -34,8 +34,7 @@
                             <time class="timeago"
                                   datetime="{{ teammate.last_played|date:'c' }}"
                                   title="{{ teammate.last_played }}">
-                                {{ teammate.last_played|date:'c'|default:'-' }}
-                            {{ teammate.last_played }}
+                                {{ teammate.last_played|default:'-' }}
                             </time>
                         </div>
                 </td>
