#52 MMR correlation removed from messages. Show signup MMR in tooltips instead

--- a/app/balancer/templates/balancer/balancer-result.html
+++ b/app/balancer/templates/balancer/balancer-result.html
@@ -65,7 +65,7 @@
                                         <a class='link-white' href="{{ player_url }}"> {{ player.name }} </a>
                                     </td>
                                     <td class="col-md-2">
-                                        <span data-toggle="tooltip" data-mmr="{{ player.mmr }}">
+                                        <span>
                                             {{ player.mmr }}
                                         </span>
                                     </td>
