--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -85,7 +85,7 @@
                         </div>
                     </td>
                     <td>
-                        <span data-toggle="tooltip" data-mmr="{{ player.ladder_mmr }}">
+                        <span>
                             {{ player.ladder_mmr }}
                         </span>
                         <div class="color-bar">
