--- a/app/ladder/templates/ladder/player_list_score.html
+++ b/app/ladder/templates/ladder/player_list_score.html
@@ -71,7 +71,7 @@
                     </div>
                 </td>
                 <td>
-                    <span data-toggle="tooltip" data-mmr="{{ player.ladder_mmr }}">
+                    <span data-toggle="tooltip" data-mmr="{{ player.dota_mmr }}">
                         {{ player.ladder_mmr }}
                     </span>
                     <div class="color-bar">
