--- a/app/ladder/templates/ladder/player_scores_table.html
+++ b/app/ladder/templates/ladder/player_scores_table.html
@@ -45,7 +45,7 @@
                     </td>
 
                     <td>
-                        <span data-toggle="tooltip" data-mmr="{{ event.mmr }}">
+                        <span data-toggle="tooltip" data-mmr="{{ event.player.dota_mmr }}">
                             {{ event.mmr }}
                         </span>
                         <span class=small>
