--- a/app/ladder/templates/ladder/player_overview.html
+++ b/app/ladder/templates/ladder/player_overview.html
@@ -30,7 +30,7 @@
         <div class="page-overview-secondary">
             <dl>
                 <dd>
-                    <span data-toggle="tooltip" data-mmr="{{ player.ladder_mmr }}">
+                    <span data-toggle="tooltip" data-mmr="{{ player.dota_mmr }}">
                         {{ player.ladder_mmr }}
                     </span>
                 </dd>
