#56 improved Kimer-stats page

--- a/app/ladder/static/ladder/css/stats.css
+++ b/app/ladder/static/ladder/css/stats.css
@@ -20,6 +20,10 @@
     font-weight: bold;
 }
 
+.stats-value a {
+    font-size: 14px;
+}
+
 .stats-caption {
     margin-top: 20px;
     font-size: 20px;
