--- a/app/ladder/templates/ladder/kimer_stats.html
+++ b/app/ladder/templates/ladder/kimer_stats.html
@@ -21,94 +21,7 @@
     </div>
 </div>
 
-<section>
-<article>
-    <div class="row stats-row">
-        <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                <span> {{ stats.matches }} </span>
-            </div>
-            <div class="stats-caption">
-                <p>Games played</p>
-            </div>
-        </div>
-
-         <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                <span> {{ stats.players }} </span>
-            </div>
-            <div class="stats-caption">
-                <p>Active players</p>
-            </div>
-        </div>
-
-         <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                <span> {{ stats.mmr|floatformat:0|default:0 }} </span>
-            </div>
-            <div class="stats-caption">
-                <p>Average MMR</p>
-            </div>
-        </div>
-    </div>
-</article>
-</section>
-
-<section>
-<article>
-    <div class="row stats-row">
-        <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                {% url 'balancer:balancer-answer' highest_mmr_match.balance.id as match_url %}
-                <span>
-                    {{ highest_mmr_match.avg_mmr }} MMR
-                    <br><br>
-                    <a href="{{ match_url }}">Ladder</a>
-                    &nbsp;
-                    <a href="https://www.dotabuff.com/matches/{{ highest_mmr_match.dota_id }}">Dotabuff</a>
-                </span>
-
-            </div>
-            <div class="stats-caption">
-                <p>Highest MMR match</p>
-            </div>
-        </div>
-
-         <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                {% url 'balancer:balancer-answer' lowest_mmr_match.balance.id as match_url %}
-                <span>
-                    {{ lowest_mmr_match.avg_mmr }} MMR
-                    <br><br>
-                    <a href="{{ match_url }}">Ladder</a>
-                    &nbsp;
-                    <a href="https://www.dotabuff.com/matches/{{ lowest_mmr_match.dota_id }}">Dotabuff</a>
-                </span>
-
-            </div>
-            <div class="stats-caption">
-                <p>Lowest MMR match</p>
-            </div>
-        </div>
-
-         <div class="col-md-4 stats-element">
-            <div class="stats-value">
-                {% url 'balancer:balancer-answer' max_diff_match.balance.id as match_url %}
-                <span>
-                    {{ max_diff_match.balance.mmr_diff }} MMR
-                    <br><br>
-                    <a href="{{ match_url }}">Ladder</a>
-                    &nbsp;
-                    <a href="https://www.dotabuff.com/matches/{{ max_diff_match.dota_id }}">Dotabuff</a>
-                </span>
-
-            </div>
-            <div class="stats-caption">
-                <p>Max MMR diff match</p>
-            </div>
-        </div>
-    </div>
-</article>
-</section>
+{% include 'ladder/kimer_stats_row.html' with caption="Last week" stats=last_week %}
+{% include 'ladder/kimer_stats_row.html' with caption="All time" stats=all_time %}
 
 {% endblock content %}
